--- a/3/ClientPortal.Web/packages/repositories.config
+++ b/3/ClientPortal.Web/packages/repositories.config
@@ -5,6 +5,7 @@
   <repository path="..\..\CakeExtracter.UnitTests\packages.config" />
   <repository path="..\..\CakeExtracter\CakeExtracter\packages.config" />
   <repository path="..\..\ClientPortal.Data\packages.config" />
+  <repository path="..\..\DAGenerators\packages.config" />
   <repository path="..\..\DirectAgents.Mvc\packages.config" />
   <repository path="..\..\LineCommander\packages.config" />
   <repository path="..\..\QuickBooks.WebConnector\packages.config" />
