--- a/3/DAGenerators/DAGenerators.csproj
+++ b/3/DAGenerators/DAGenerators.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B47050A5-F84E-44CE-92C1-8415A198568B}</ProjectGuid>
+    <ProjectGuid>{70F3E367-5F86-4718-9A27-6EDC9FEF9EC9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MSCharting</RootNamespace>
-    <AssemblyName>MSCharting</AssemblyName>
+    <RootNamespace>DAGenerators</RootNamespace>
+    <AssemblyName>DAGenerators</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus">
+      <HintPath>..\ClientPortal.Web\packages\EPPlus.3.1.3.3\lib\net35\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -42,11 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IChartBuilder.cs" />
-    <Compile Include="ChartBase.cs" />
-    <Compile Include="OrdersCPOChart.cs" />
-    <Compile Include="TwoSeriesChartBuilder.cs" />
+    <Compile Include="Charts\ChartBase.cs" />
+    <Compile Include="Charts\IChartBuilder.cs" />
+    <Compile Include="Charts\OrdersCPOChart.cs" />
+    <Compile Include="Charts\TwoSeriesChartBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spreadsheets\SearchReportPPC.cs" />
+    <Compile Include="Spreadsheets\SpreadsheetBase.cs" />
+    <Compile Include="Spreadsheets\TestSpreadSheet.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
