Admin- test search spreadsheet generation

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -60,7 +60,7 @@
     <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
     <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
 
-    <add key="ExcelTemplate_SearchPPC" value="SearchPPCtemplate.xlsx" />
+    <add key="PATH_Search" value="C:\DA\portal\search" />
 
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
