BingAds- alternate credentials Synch Criteo- timezoneOffset param AdWordsLoader- handle "Product Listing Ad - Coupon" clickType

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -64,12 +64,18 @@
 
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+
+    <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
+
     <add key="BingApiToken" value="EW65911AO" />
     <add key="BingApiUsername" value="API_DanielOwen" />
     <add key="BingApiPassword" value="agentdan1" />
+    <add key="BingApiToken773" value="00684QCJH5798716" />
+    <add key="BingApiUsername773" value="API_Folica" />
+    <add key="BingApiPassword773" value="ch@ngem3" />
+
     <add key="BingReportFolder" value="C:\Downloads" />
     <add key="BingReportFilename" value="bingrep.zip" />
-    <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
 
     <add key="CriteoUsername" value="criteo_folica_api" />
     <add key="CriteoPassword" value="Folica.Criteo.2013" />
