--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -24,6 +24,8 @@
     <add key="UseYesterdayAsLatest" value="false" />
     <add key="Search_UseYesterdayAsLatest" value="true" />
     <add key="PATH_Search" value="C:\DA\portal\search" />
+    <add key="GmailEmailer_Username" value="portal@directagents.com" />
+    <add key="GmailEmailer_Password" value="Welcomenew1" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
