--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common.cs" />
     <Compile Include="Contexts\Advertiser.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
