--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -77,10 +77,14 @@
     <add key="BingReportFolder" value="C:\Downloads" />
     <add key="BingReportFilename" value="bingrep.zip" />
 
-    <add key="CriteoUsername" value="criteo_folica_api" />
+    <add key="CriteoUsername_Folica" value="criteo_folica_api" />
+    <add key="CriteoAppToken_Folica" value="2061376491693608448" />
+    <add key="CriteoUsername_MacMemory" value="macmemory_api" />
+    <add key="CriteoAppToken_MacMemory" value="8904347534213924864" />
+    <add key="CriteoUsername_OriginalJuan" value="originaljuan_api" />
+    <add key="CriteoAppToken_OriginalJuan" value="5612285344152197120" />
     <add key="CriteoPassword" value="Folica.Criteo.2013" />
     <add key="CriteoSource" value="DirectAgents-ClientPortal-1" />
-    <add key="CriteoAppToken" value="2061376491693608448" />
 
     <add key="GoogleAPI_Certificate" value="271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
     <add key="GoogleAPI_ServiceEmail" value="960492209499-cdktdkluj4sj5ee8bto7hdi7m058lfg9@developer.gserviceaccount.com" />
