--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -86,6 +86,9 @@
     <add key="CriteoPassword" value="Folica.Criteo.2013" />
     <add key="CriteoSource" value="DirectAgents-ClientPortal-1" />
 
+    <add key="LocalConnexUsername" value="Portal@directagents.com" />
+    <add key="LocalConnexPassword" value="dir3ctapi" />
+
     <add key="GoogleAPI_Certificate" value="271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
     <add key="GoogleAPI_ServiceEmail" value="960492209499-cdktdkluj4sj5ee8bto7hdi7m058lfg9@developer.gserviceaccount.com" />
   </appSettings>
