--- a/3/ClientPortal.Web/packages/repositories.config
+++ b/3/ClientPortal.Web/packages/repositories.config
@@ -12,5 +12,6 @@
   <repository path="..\..\QuickBooks\packages.config" />
   <repository path="..\ClientPortal.Web.Tests\packages.config" />
   <repository path="..\ClientPortal.Web\packages.config" />
+  <repository path="..\LocalConnex\packages.config" />
   <repository path="..\Spreadsheets\packages.config" />
 </repositories>
