bing credentials for credit pros; "phone calls" click type

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -70,9 +70,15 @@
     <add key="BingApiToken" value="EW65911AO" />
     <add key="BingApiUsername" value="API_DanielOwen" />
     <add key="BingApiPassword" value="agentdan1" />
-    <add key="BingApiToken773" value="00684QCJH5798716" />
+    <add key="BingApiToken773" value="00684QCJH5798716" /><!-- Folica -->
     <add key="BingApiUsername773" value="API_Folica" />
     <add key="BingApiPassword773" value="ch@ngem3" />
+    <add key="BingApiToken1556045" value="0106T10H6B028225" /><!-- Credit Pros -->
+    <add key="BingApiUsername1556045" value="nydamon" />
+    <add key="BingApiPassword1556045" value="damon083" />
+    <!--<add key="BingApiToken" value="" />
+    <add key="BingApiUsername" value="" />
+    <add key="BingApiPassword" value="" />-->
 
     <add key="BingReportFolder" value="C:\Downloads" />
     <add key="BingReportFilename" value="bingrep.zip" />
