--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -76,6 +76,16 @@
     <add key="BingApiToken1556045" value="0106T10H6B028225" /><!-- Credit Pros -->
     <add key="BingApiUsername1556045" value="nydamon" />
     <add key="BingApiPassword1556045" value="damon083" />
+
+    <add key="BingApiToken910318" value="00190H7EI6336024" /><!-- ePromos --><!-- didn't work; need danielep password? -->
+    <add key="BingApiUsername910318" value="danielep1" />
+    <add key="BingApiPassword910318" value="agentdan" />
+    <add key="BingApiToken3292159" value="0122HJ1B0S875420" /><!-- Baladea --><!-- didn't work; wrong URL? -->
+    <add key="BingApiUsername3292159" value="s.saval@readymoves.com" />
+    <add key="BingApiPassword3292159" value="rm2014marketing" />
+    <add key="BingApiToken253534" value="002RHL0EVQ467216" /><!-- SSO --><!-- didn't work; wrong URL? -->
+    <add key="BingApiUsername253534" value="da.sso@outlook.com" />
+    <add key="BingApiPassword253534" value="Agentdan" />
     <!--<add key="BingApiToken" value="" />
     <add key="BingApiUsername" value="" />
     <add key="BingApiPassword" value="" />-->
@@ -94,6 +104,9 @@
 
     <add key="LocalConnexUsername" value="Portal@directagents.com" />
     <add key="LocalConnexPassword" value="dir3ctapi" />
+
+    <add key="AdRollUsername" value="portal@directagents.com" />
+    <add key="AdRollPassword" value="dir3ct@pi!" />
 
     <add key="GoogleAPI_Certificate" value="271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
     <add key="GoogleAPI_ServiceEmail" value="960492209499-cdktdkluj4sj5ee8bto7hdi7m058lfg9@developer.gserviceaccount.com" />
