AdDailySummary.Spend precision

--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -329,6 +329,10 @@
     <Compile Include="Migrations\201501151727433_Mig_AdRollProfile_Eid.Designer.cs">
       <DependentUpon>201501151727433_Mig_AdRollProfile_Eid.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201501221724098_Mig_AdDailySummary_precision.cs" />
+    <Compile Include="Migrations\201501221724098_Mig_AdDailySummary_precision.Designer.cs">
+      <DependentUpon>201501221724098_Mig_AdDailySummary_precision.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ClientPortalRepository.cs" />
@@ -410,6 +414,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201501151727433_Mig_AdRollProfile_Eid.resx">
       <DependentUpon>201501151727433_Mig_AdRollProfile_Eid.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501221724098_Mig_AdDailySummary_precision.resx">
+      <DependentUpon>201501221724098_Mig_AdDailySummary_precision.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
