--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -280,6 +280,12 @@
     <Content Include="Areas\Admin\Views\SimpleReports\Test.cshtml">
       <SubType>Code</SubType>
     </Content>
+    <Content Include="Areas\TD\Views\Reports\Weekly.cshtml">
+      <SubType>Code</SubType>
+    </Content>
+    <Content Include="Areas\TD\Views\Shared\_TDKendoFuncs.cshtml">
+      <SubType>Code</SubType>
+    </Content>
     <Content Include="Content\blackbird.css" />
     <Content Include="Content\blackbird_icons.png" />
     <Content Include="Content\blackbird_panel.png" />
