model cleanup; show/unshow conversions

--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -23,6 +23,7 @@
     <add key="PortalUrl" value="http://localhost:60195" />
     <add key="UseYesterdayAsLatest" value="false" />
     <add key="Search_UseYesterdayAsLatest" value="true" />
+    <add key="TD_UseYesterdayAsLatest" value="true" />
     <add key="PATH_Search" value="C:\DA\portal\search" />
     <add key="GmailEmailer_Username" value="portal@directagents.com" />
     <add key="GmailEmailer_Password" value="Welcomenew1" />
