--- a/3/ClientPortal.Web/packages/repositories.config
+++ b/3/ClientPortal.Web/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\..\..\1\DirectAgents.Domain\packages.config" />
   <repository path="..\..\API\AdRoll\packages.config" />
+  <repository path="..\..\BingAds\packages.config" />
   <repository path="..\..\CakeExtracter.ConsoleApplication\packages.config" />
   <repository path="..\..\CakeExtracter.UnitTests\packages.config" />
   <repository path="..\..\CakeExtracter\CakeExtracter\packages.config" />
