--- a/3/LineCommander/App.config
+++ b/3/LineCommander/App.config
@@ -78,7 +78,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://adcenterapi.microsoft.com/Api/Advertiser/V8/Reporting/ReportingService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportingService" contract="Reporting.IReportingService" name="BasicHttpBinding_IReportingService" />
+      <endpoint address="https://api.bingads.microsoft.com/Api/Advertiser/Reporting/v9/ReportingService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportingService" contract="Reporting.IReportingService" name="BasicHttpBinding_IReportingService" />
     </client>
   </system.serviceModel>
   <startup>
