--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -11,13 +11,13 @@
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CakeTrafficContext" connectionString="data source=biz\sqlexpress;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
-<!--
-    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalTest;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="CakeTrafficContext" connectionString="data source=.\sql2;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
--->
     <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="TDContext" connectionString="data source=biz\sqlexpress;initial catalog=ClientPortalTD;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+<!--
+    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql3;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql3;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TDContext" connectionString="data source=.\sql3;initial catalog=ClientPortalTD;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+-->
   </connectionStrings>
 
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
@@ -67,26 +67,33 @@
 
     <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
 
+    <add key="BingCustomerID" value="234647" />
     <add key="BingApiToken" value="EW65911AO" />
     <add key="BingApiUsername" value="API_DanielOwen" />
     <add key="BingApiPassword" value="agentdan1" />
+    <!-- CustomerID? -->
     <add key="BingApiToken773" value="00684QCJH5798716" /><!-- Folica -->
     <add key="BingApiUsername773" value="API_Folica" />
     <add key="BingApiPassword773" value="ch@ngem3" />
+    <!-- CustomerID? -->
     <add key="BingApiToken1556045" value="0106T10H6B028225" /><!-- Credit Pros -->
     <add key="BingApiUsername1556045" value="nydamon" />
     <add key="BingApiPassword1556045" value="damon083" />
 
+    <!-- CustomerID? -->
     <add key="BingApiToken910318" value="00190H7EI6336024" /><!-- ePromos --><!-- didn't work; need danielep password? -->
     <add key="BingApiUsername910318" value="danielep1" />
     <add key="BingApiPassword910318" value="agentdan" />
+    <!-- CustomerID? -->
     <add key="BingApiToken3292159" value="0122HJ1B0S875420" /><!-- Baladea --><!-- didn't work; wrong URL? -->
     <add key="BingApiUsername3292159" value="s.saval@readymoves.com" />
     <add key="BingApiPassword3292159" value="rm2014marketing" />
+    <!-- CustomerID? -->
     <add key="BingApiToken253534" value="002RHL0EVQ467216" /><!-- SSO --><!-- didn't work; wrong URL? -->
     <add key="BingApiUsername253534" value="da.sso@outlook.com" />
     <add key="BingApiPassword253534" value="Agentdan" />
-    <!--<add key="BingApiToken" value="" />
+    <!--<add key="BingCustomerID" value="" />
+    <add key="BingApiToken" value="" />
     <add key="BingApiUsername" value="" />
     <add key="BingApiPassword" value="" />-->
 
@@ -123,7 +130,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://adcenterapi.microsoft.com/Api/Advertiser/V8/Reporting/ReportingService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportingService" contract="Reporting.IReportingService" name="BasicHttpBinding_IReportingService" />
+      <endpoint address="https://api.bingads.microsoft.com/Api/Advertiser/Reporting/v9/ReportingService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportingService" contract="Reporting.IReportingService" name="BasicHttpBinding_IReportingService" />
       <endpoint address="https://advertising.criteo.com/API/v201010/AdvertiserService.asmx" binding="basicHttpBinding" bindingConfiguration="CriteoAdvertiserAPISoap" contract="CriteoAPI.CriteoAdvertiserAPISoap" name="CriteoAdvertiserAPISoap" />
     </client>
   </system.serviceModel>
