--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -1106,6 +1106,7 @@
     <Content Include="Content\kendo\2015.1.318\images\kendoui.ttf" />
     <Content Include="Content\kendo\2015.1.318\images\kendoui.woff" />
     <Content Include="Areas\TD\Views\Home\Test.cshtml" />
+    <Content Include="Areas\Admin\Views\TDAdmin\AdRollProfiles.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
