misc, increase criteo api timeout

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -124,7 +124,7 @@
         <binding name="BasicHttpBinding_IReportingService" sendTimeout="00:03:00">
           <security mode="Transport" />
         </binding>
-        <binding name="CriteoAdvertiserAPISoap" maxReceivedMessageSize="100100">
+        <binding name="CriteoAdvertiserAPISoap" sendTimeout="00:02:00" maxReceivedMessageSize="100100">
           <security mode="Transport" />
         </binding>
       </basicHttpBinding>
