--- a/3/LineCommander/App.config
+++ b/3/LineCommander/App.config
@@ -6,7 +6,7 @@
       <section name="LineCommander.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
     
-  <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler" /></configSections>
+  </configSections>
   <connectionStrings>
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -126,6 +126,10 @@
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Extensions" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <userSettings>
@@ -136,26 +140,7 @@
     </LineCommander.Properties.Settings>
   </userSettings>
   <AdWordsApi>
-    <!--
-      This section contains the settings specific to AdWords and DoubleClick Ad
-      Exchange Buyer API DotNet Client Library. You can use the App.config /
-      Web.config for quickly configuring and running a simple application.
-      However, it is not mandatory to provide your settings in the config file,
-      you may also set or override these settings at runtime. See
-      https://github.com/googleads/googleads-dotnet-lib/wiki/Getting-Started
-      for details.
-
-      You can refer to
-      https://github.com/googleads/googleads-dotnet-lib/wiki/Understanding-App.config
-      for detailed explanation of each configuration key.
-    --><!-- Settings related to SOAP logging. --><!-- Proxy settings for library. --><!-- Settings specific to AdWords API.--><!-- If your application is a simple script that makes calls to only a
-         single Adwords account, then you can set your customer ID here. If you
-         have multiple customer IDs to deal with in your account, then you can
-         comment out this key and set the value at runtime by setting
-         ((AdWordsAppConfig) user.Config).ClientCustomerId = "xxx";
-    --><!-- The following OAuth2 settings are optional. --><!-- Provide a different OAuth2 scope if required. Multiple scopes should be
-         separated by spaces. --><!-- <add key="OAuth2Scope" value="INSERT_OAUTH2_SCOPE_HERE" /> --><!-- Use the following keys if you want to use Web / Installed application
-         OAuth flow.--><add key="UserAgent" value="direct-agents-client-portal" />
+    <add key="UserAgent" value="direct-agents-client-portal" />
     <add key="DeveloperToken" value="kEw3EPUPKDwKFpjRRIpm5Q" />
 
     
@@ -164,14 +149,7 @@
     
     
     
-    <!-- Settings specific to use OAuth2 as authentication mechanism. You could
-         run Common\Util\OAuth2TokenGenerator.cs to generate this section of the
-         config file.
-    --><!-- Provide the OAuth2 client ID and secret. You can create one from
-         https://console.developers.google.com. See
-         https://github.com/googleads/googleads-dotnet-lib/wiki/Using-OAuth2
-         for more details.
-    --><add key="OAuth2ClientId" value="596863405612.apps.googleusercontent.com" />
+    <add key="OAuth2ClientId" value="596863405612.apps.googleusercontent.com" />
     <add key="OAuth2ClientSecret" value="8qonZCA_oSenYehXTQ9Hcgxk" />
 
     
@@ -182,14 +160,7 @@
 
     
     
-    <!-- If you are using a single MCC account's credentials to make calls to
-         all your accounts, then you can run OAuth2TokenGenerator.cs to generate
-         a RefreshToken for that account and set this key in your application's
-         App.config / Web.config. If you are making calls to multiple unrelated
-         accounts, then you need to implement OAuth2 flow in your account and
-         set this key at runtime. See OAuth folder under Examples folder for a
-         web and a console application example.
-    --><add key="OAuth2RefreshToken" value="1/Frp86av8j0EBR276x606m0EitEeEwFzob377Whl0K0E" />
+    <add key="OAuth2RefreshToken" value="1/Frp86av8j0EBR276x606m0EitEeEwFzob377Whl0K0E" />
 
     
     
@@ -206,77 +177,8 @@
     -->
     
     
-  <!-- Settings related to general library behaviour. --><!-- Use this key to automatically retry a call that failed due to a
-         recoverable error like expired credentials. --><!-- <add key="RetryCount" value="1"/> --><!-- Set the service timeout in milliseconds. --><!-- <add key="Timeout" value="100000"/> --><!-- Use this key to enable or disable gzip compression in SOAP requests.--><add key="MaskCredentials" value="true" /><add key="EnableGzipCompression" value="true" /><add key="ProxyServer" value="" /><add key="ProxyUser" value="" /><add key="ProxyPassword" value="" /><add key="ProxyDomain" value="" /><add key="UserAgent" value="INSERT_YOUR_COMPANY_OR_APPLICATION_NAME_HERE" /><add key="DeveloperToken" value="INSERT_YOUR_DEVELOPER_TOKEN_HERE" /><add key="ClientCustomerId" value="INSERT_YOUR_CLIENT_CUSTOMER_ID_HERE" /><add key="OAuth2ClientId" value="INSERT_OAUTH2_CLIENT_ID_HERE" /><add key="OAuth2ClientSecret" value="INSERT_OAUTH2_CLIENT_SECRET_HERE" /><add key="OAuth2Mode" value="APPLICATION" /><add key="OAuth2RefreshToken" value="INSERT_OAUTH2_REFRESH_TOKEN_HERE" /><!-- Optional: Specify an OAuth2 redirect url if you are building a
-         web application and implementing OAuth2 web flow in your application.
-    --><!-- <add key="OAuth2RedirectUri" value="" /> --><!-- Use the following keys if you want to use OAuth2 service account flow.
-         You should comment out all the keys for Web / Installed application
-         OAuth flow above. See
-         https://developers.google.com/adwords/api/docs/guides/service-accounts
-         https://github.com/googleads/googleads-dotnet-lib/wiki/Using-OAuth2
-         for more details.
-    --><!--
-    <add key="OAuth2Mode" value="SERVICE_ACCOUNT" />
-    <add key="OAuth2ServiceAccountEmail"
-        value="INSERT_OAUTH2_SERVICE_ACCOUNT_EMAIL_HERE" />
-    <add key="OAuth2PrnEmail" value="INSERT_OAUTH2_USER_EMAIL_HERE" />
-    <add key="OAuth2JwtCertificatePath"
-        value="INSERT_OAUTH2_JWT_CERTIFICATE_PATH_HERE" />
-    <add key="OAuth2JwtCertificatePassword"
-        value="INSERT_OAUTH2_JWT_CERTIFICATE_PASSWORD_HERE" />
-    --></AdWordsApi>
+  </AdWordsApi>
   
   
   
-<system.web>
-    <webServices>
-      <soapExtensionTypes>
-        <add type="Google.Api.Ads.Common.Lib.SoapListenerExtension, Google.Ads.Common" priority="1" group="0" />
-      </soapExtensionTypes>
-    </webServices>
-  </system.web><system.net>
-    <settings>
-      <httpWebRequest maximumErrorResponseLength="-1" />
-    </settings>
-  </system.net><system.diagnostics>
-    <sources>
-      <source name="AdsClientLibs.DeprecationMessages" switchName="AdsClientLibs.DeprecationMessages" switchType="System.Diagnostics.SourceSwitch">
-        <listeners>
-          <add name="myListener" type="System.Diagnostics.EventLogTraceListener" initializeData="Application" />
-        </listeners>
-      </source>
-      <source name="AdsClientLibs.SoapXmlLogs" switchName="AdsClientLibs.SoapXmlLogs" switchType="System.Diagnostics.SourceSwitch">
-        <listeners>
-          <!-- Modify the initializeData attribute below to control the
-                path to the SOAP XML log file. -->
-          <add name="soapXmlLogListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\Logs\soap_xml.log" />
-          <remove name="Default" />
-        </listeners>
-      </source>
-      <source name="AdsClientLibs.RequestInfoLogs" switchName="AdsClientLibs.RequestInfoLogs" switchType="System.Diagnostics.SourceSwitch">
-        <listeners>
-          <!-- Modify the initializeData attribute below to control the
-                path to the request info log file. -->
-          <add name="requestInfoLogListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\Logs\request_info.log" />
-          <remove name="Default" />
-        </listeners>
-      </source>
-    </sources>
-    <switches>
-      <!-- Use this trace switch to control the deprecation trace messages
-          written by Ads* .NET libraries. The default is level is set to
-          Warning. To disable all messages, set this value to Off. See
-          http://msdn.microsoft.com/en-us/library/system.diagnostics.sourcelevels.aspx
-          for all possible values this key can take. -->
-      <add name="AdsClientLibs.DeprecationMessages" value="Warning" />
-      <!-- Use this trace switch to control the SOAP XML logs written by Ads*
-          .NET libraries. The default level is set to Off. Logs are generated at
-          both the Error and Information levels. -->
-      <add name="AdsClientLibs.SoapXmlLogs" value="Off" />
-      <!-- Use this trace switch to control the Request Info logs written by
-          Ads* .NET libraries. The default level is set to Off. Logs are
-          generated at both the Error and Information levels. -->
-      <add name="AdsClientLibs.RequestInfoLogs" value="Off" />
-    </switches>
-    <trace autoflush="true" />
-  </system.diagnostics></configuration>
+</configuration>
