--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -277,6 +277,7 @@
     <Compile Include="Entities\CreativeStat.cs" />
     <Compile Include="Entities\Goal.cs" />
     <Compile Include="Entities\Offer.cs" />
+    <Compile Include="Entities\SearchAccount.cs" />
     <Compile Include="Entities\SearchProfile.cs" />
     <Compile Include="Entities\SimpleReport.cs" />
     <Compile Include="Entities\TD\AdRoll\AdDailySummary.cs" />
