--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -161,6 +161,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="AutoMapper" publicKeyToken="be96cd2c38ef1005" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   <!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
 		     to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
