--- a/3/ClientPortal.Web/ClientPortal.Web/packages.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/packages.config
@@ -11,11 +11,13 @@
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.4.13329" targetFramework="net45" />
   <package id="DynamicQuery" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="FluentValidationNA" version="1.2.16" targetFramework="net45" />
   <package id="Foundation5.Core" version="5.3" targetFramework="net45" />
   <package id="Foundation5.MVC" version="2.0.530" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.0" targetFramework="net45" />
+  <package id="KendoGridBinderEx" version="5.0.0.7" targetFramework="net45" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
@@ -42,6 +44,7 @@
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net45" />
+  <package id="System.Linq.Dynamic.Library" version="1.1.13" targetFramework="net45" />
   <package id="WebActivator" version="1.5.3" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
